--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2? family= Baloo+Da+2:wght@400;500;600;700 & family= Josefin+Slab:ital,wght@0,300; 0,400;0,600;0,700;1,300;1,400;1,600 & family= Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400 & display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Muli:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
-
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css");
 *{
     margin: 0;
     padding: 0;
@@ -12,6 +11,10 @@
     --font-primary: "Baloo Da 2", serif;
     --font-secundary: "Josefin Slab", serif;
     --font-action: "Mulish", serif;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 .hamburguer
@@ -177,6 +180,7 @@ header{
     top: 0;
     right: -20rem;
     transition: all 1s;
+    z-index: 150;
 }
 
 .show-menu .sidebar{
@@ -411,38 +415,36 @@ header{
     visibility: visible;
 }
 
-.sessao-contato{
+.sessao-contato {
     width: 100%;
     height: 100vh;
     background-color: #272727;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-.contato-wrapper{
+.contato-wrapper {
     width: 60%;
     height: 30rem;
     display: flex;
-    box-shadow: 0 2rem 3rem rgba(0,0,0, .5);
-
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
 }
 
-.contato-left{
+.contato-left {
     width: 35%;
-    background: linear-gradient(rgba(15,15,15, 0.6),rgba(22,22,22, 0.9)), 
-    url(img/contato.jpg);
+    background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+url(img/contato.jpg);
     background-size: cover;
 }
 
-.contato-right{
+.contato-right {
     width: 65%;
     background-color: #eee;
     padding: 1rem 3rem 3rem 3rem;
 }
 
-.sessao-contato h1{
+.sessao-contato h1 {
     width: 100%;
     text-align: center;
     font-family: var(--font-primary);
@@ -451,18 +453,18 @@ header{
     font-weight: lighter;
 }
 
-.sessao-contato form{
+.sessao-contato form {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.input-group{
+.input-group {
     position: relative;
 }
 
-.field{
+.field {
     background: transparent;
     border: none;
     width: 20rem;
@@ -471,33 +473,32 @@ header{
     border-bottom: 2px dashed #636363;
     height: 3rem;
     outline: none;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
-.input-group textarea{
+.input-group textarea {
     padding-top: 1rem;
     max-width: 25rem;
-    max-height: 5rem;
+    max-height: 3rem;
 }
 
-.field-label{
+.field-label {
     position: absolute;
     left: 0;
     top: 2rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: var(--font-secundary);
     text-transform: uppercase;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
-.field:focus ~ label{
+.field:focus ~ label {
     top: 0;
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
 
-.field:focus{
+.field:focus {
     border-bottom: 1px solid;
-
 }
 .btn-submit{
     font-size: 1.2rem;
@@ -515,42 +516,41 @@ header{
     pointer-events: none;
 }
 
-
-
 .sessao-orcamento{
     width: 100%;
     height: 100vh;
-    background: url("/img/bg-orcamento.jpg");
+    background: url("./img//bg-orcamento.jpg");
     object-fit: cover;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .orcamento-wrapper{
     width: 60%;
     height: 80%;
     background-color: #ffffff99;
     border-radius: 10px;
-    box-shadow: 0 0.1rem 0.3rem rgba(0,0,0, .5);
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
     position: relative;
-
 }
 
 .sessao-orcamento h1{
     position: absolute;
     top: -2.5rem;
     left: 2rem;
-    background: #6a3093;  
-    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);  
-    background: linear-gradient(to right, #a044ff, #6a3093); 
-    padding: 0 3;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    padding: 0 3rem;
     color: #fff;
     font-family: var(--font-primary);
     font-size: 3rem;
     font-weight: lighter;
-    box-shadow: 0 0.1rem 0.3rem rgba(0,0,0, .5);
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
+
 .sessao-orcamento form{
     margin: 4rem;
     display: grid;
@@ -558,11 +558,12 @@ header{
     column-gap: 2rem;
     row-gap: 2rem;
 }
+
 .sessao-orcamento label{
-    font-family: var(--font-secundary);
+    font-family: var(--font-action);
     font-size: 1.5rem;
-    font-weight: bold;
 }
+
 .sessao-orcamento input[type="number"]{
     font-family: var(--font-secundary);
     width: 4rem;
@@ -578,4 +579,52 @@ header{
     padding: 1rem;
     cursor: pointer;
     grid-column: 2;
+}
+
+footer{
+    width: 100%;
+    height: 7rem;
+    background-color: #17181b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p{
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a{
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1.3rem;
+}
+
+.social-list ul {
+    display: flex;
+}
+
+#link-topo{
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: .3rem;
+    box-shadow:  0 0.1rem 0.6rem #00000009;
 }
